fix: add z-index to toast viewport

--- a/apps/www/styles/lumi.css
+++ b/apps/www/styles/lumi.css
@@ -70,7 +70,7 @@
 */
 @layer utilities {
   .toast-viewport {
-    @apply fixed flex flex-col w-[var(--toast-max-width-mobile)] lg:w-[var(--toast-max-width-desktop)] outline-none pointer-events-none z-1000;
+    @apply fixed z-10 flex flex-col w-[var(--toast-max-width-mobile)] lg:w-[var(--toast-max-width-desktop)] outline-none pointer-events-none;
   }
   /* Viewport Positioning */
   .toast-viewport[data-position^="top"] { top: var(--toast-viewport-padding); bottom: auto; }
@@ -88,10 +88,7 @@
 */
 @layer utilities {
   .toast-root {
-    @apply absolute w-full pointer-events-auto;
-    /* Stacking */
-    --toast-index: 0; /* Default fallback */
-    z-index: calc(1000 - var(--toast-index));
+    @apply absolute w-full pointer-events-auto z-[calc(1000-var(--toast-index))];
     
     /* Transitions */
     transition: 
